--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -103,3 +103,7 @@ div.dt-button-collection {
     background-color: rgba(128, 128, 128, 0.1);
     font-weight: bolder;
 }
+
+input.select2-search__field {
+    margin-left: 10px;
+}
